[gd_scene load_steps=4 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://cube/cube_controller.tscn" type="PackedScene" id=3]

[node name="game" type="Spatial"]
script = ExtResource( 1 )
colors_players = [ Color( 1, 0, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 0, 1 ) ]

[node name="gimbal" parent="." instance=ExtResource( 2 )]

[node name="cube" parent="." instance=ExtResource( 3 )]

[node name="win_controls" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WinLabel" type="Label" parent="win_controls"]
anchor_left = 0.188746
anchor_top = 0.540908
anchor_right = 0.188746
anchor_bottom = 0.540908
margin_left = 38.4375
margin_top = 101.734
margin_right = 132.438
margin_bottom = 115.734
text = "Winner found !"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="back_button" type="Button" parent="win_controls"]
anchor_left = 1.1376
anchor_top = 3.48763
anchor_right = 1.1376
anchor_bottom = 3.48763
margin_right = 42.0
margin_bottom = 20.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 569.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox_rotatex" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 112.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateX0" type="Button" parent="HBoxContainer/vbox_rotatex"]
margin_right = 112.0
margin_bottom = 20.0
text = "Rotate plane X0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateX1" type="Button" parent="HBoxContainer/vbox_rotatex"]
margin_top = 24.0
margin_right = 112.0
margin_bottom = 44.0
text = "Rotate plane X1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateX2" type="Button" parent="HBoxContainer/vbox_rotatex"]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 68.0
text = "Rotate plane X2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateX3" type="Button" parent="HBoxContainer/vbox_rotatex"]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 92.0
text = "Rotate plane X3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateX4" type="Button" parent="HBoxContainer/vbox_rotatex"]
margin_top = 96.0
margin_right = 112.0
margin_bottom = 116.0
text = "Rotate plane X4"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="vbox_rotatey" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 116.0
margin_right = 227.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateY0" type="Button" parent="HBoxContainer/vbox_rotatey"]
margin_right = 111.0
margin_bottom = 20.0
text = "Rotate plane Y0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateY1" type="Button" parent="HBoxContainer/vbox_rotatey"]
margin_top = 24.0
margin_right = 111.0
margin_bottom = 44.0
text = "Rotate plane Y1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateY2" type="Button" parent="HBoxContainer/vbox_rotatey"]
margin_top = 48.0
margin_right = 111.0
margin_bottom = 68.0
text = "Rotate plane Y2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateY3" type="Button" parent="HBoxContainer/vbox_rotatey"]
margin_top = 72.0
margin_right = 111.0
margin_bottom = 92.0
text = "Rotate plane Y3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateY4" type="Button" parent="HBoxContainer/vbox_rotatey"]
margin_top = 96.0
margin_right = 111.0
margin_bottom = 116.0
text = "Rotate plane Y4"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="vbox_rotatez" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 231.0
margin_right = 343.0
margin_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateZ0" type="Button" parent="HBoxContainer/vbox_rotatez"]
margin_right = 112.0
margin_bottom = 20.0
text = "Rotate plane Z0"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateZ1" type="Button" parent="HBoxContainer/vbox_rotatez"]
margin_top = 24.0
margin_right = 112.0
margin_bottom = 44.0
text = "Rotate plane Z1"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateZ2" type="Button" parent="HBoxContainer/vbox_rotatez"]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 68.0
text = "Rotate plane Z2"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateZ3" type="Button" parent="HBoxContainer/vbox_rotatez"]
margin_top = 72.0
margin_right = 112.0
margin_bottom = 92.0
text = "Rotate plane Z3"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotateZ4" type="Button" parent="HBoxContainer/vbox_rotatez"]
margin_top = 96.0
margin_right = 112.0
margin_bottom = 116.0
text = "Rotate plane Z4"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="vbox_cube_rotate" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 347.0
margin_right = 452.0
margin_bottom = 116.0

[node name="cube_rotate_x" type="Button" parent="HBoxContainer/vbox_cube_rotate"]
margin_right = 105.0
margin_bottom = 20.0
text = "Rotate cube X"

[node name="cube_rotate_x-" type="Button" parent="HBoxContainer/vbox_cube_rotate"]
margin_top = 24.0
margin_right = 105.0
margin_bottom = 44.0
text = "Rotate cube X-"

[node name="cube_rotate_z" type="Button" parent="HBoxContainer/vbox_cube_rotate"]
margin_top = 48.0
margin_right = 105.0
margin_bottom = 68.0
text = "Rotate cube Z"

[node name="cube_rotate_z-" type="Button" parent="HBoxContainer/vbox_cube_rotate"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 92.0
text = "Rotate cube Z-"

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 456.0
margin_right = 504.0
margin_bottom = 116.0

[node name="Reset" type="Button" parent="HBoxContainer/VBoxContainer3"]
margin_right = 48.0
margin_bottom = 20.0
text = "RESET"

[node name="spacing_slider" type="HSlider" parent="."]
anchor_left = 0.762272
anchor_top = 0.949401
anchor_right = 0.974186
anchor_bottom = 0.949401
margin_right = 16.0
margin_bottom = 16.0
min_value = 3.0
max_value = 10.0
step = 0.1
value = 3.0
tick_count = 7
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="win_controls/back_button" to="." method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatex/RotateX0" to="." method="highlight_face" binds= [ 0, 0 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatex/RotateX0" to="." method="highlight_face" binds= [ 0, 0, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatex/RotateX0" to="." method="rotate_face" binds= [ 0, 0 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatex/RotateX1" to="." method="highlight_face" binds= [ 0, 1 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatex/RotateX1" to="." method="highlight_face" binds= [ 0, 1, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatex/RotateX1" to="." method="rotate_face" binds= [ 0, 1 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatex/RotateX2" to="." method="highlight_face" binds= [ 0, 2 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatex/RotateX2" to="." method="highlight_face" binds= [ 0, 2, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatex/RotateX2" to="." method="rotate_face" binds= [ 0, 2 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatex/RotateX3" to="." method="highlight_face" binds= [ 0, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatex/RotateX3" to="." method="highlight_face" binds= [ 0, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatex/RotateX3" to="." method="rotate_face" binds= [ 0, 3 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatex/RotateX4" to="." method="highlight_face" binds= [ 0, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatex/RotateX4" to="." method="highlight_face" binds= [ 0, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatex/RotateX4" to="." method="rotate_face" binds= [ 0, 4 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatey/RotateY0" to="." method="highlight_face" binds= [ 1, 0 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatey/RotateY0" to="." method="highlight_face" binds= [ 1, 0, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatey/RotateY0" to="." method="rotate_face" binds= [ 1, 0 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatey/RotateY1" to="." method="highlight_face" binds= [ 1, 1 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatey/RotateY1" to="." method="highlight_face" binds= [ 1, 1, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatey/RotateY1" to="." method="rotate_face" binds= [ 1, 1 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatey/RotateY2" to="." method="highlight_face" binds= [ 1, 2 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatey/RotateY2" to="." method="highlight_face" binds= [ 1, 2, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatey/RotateY2" to="." method="rotate_face" binds= [ 1, 2 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatey/RotateY3" to="." method="highlight_face" binds= [ 1, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatey/RotateY3" to="." method="highlight_face" binds= [ 1, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatey/RotateY3" to="." method="rotate_face" binds= [ 1, 3 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatey/RotateY4" to="." method="highlight_face" binds= [ 1, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatey/RotateY4" to="." method="highlight_face" binds= [ 1, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatey/RotateY4" to="." method="rotate_face" binds= [ 1, 4 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatez/RotateZ0" to="." method="highlight_face" binds= [ 2, 0 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatez/RotateZ0" to="." method="highlight_face" binds= [ 2, 0, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatez/RotateZ0" to="." method="rotate_face" binds= [ 2, 0 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatez/RotateZ1" to="." method="highlight_face" binds= [ 2, 1 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatez/RotateZ1" to="." method="highlight_face" binds= [ 2, 1, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatez/RotateZ1" to="." method="rotate_face" binds= [ 2, 1 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatez/RotateZ2" to="." method="highlight_face" binds= [ 2, 2 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatez/RotateZ2" to="." method="highlight_face" binds= [ 2, 2, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatez/RotateZ2" to="." method="rotate_face" binds= [ 2, 2 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatez/RotateZ3" to="." method="highlight_face" binds= [ 2, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatez/RotateZ3" to="." method="highlight_face" binds= [ 2, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatez/RotateZ3" to="." method="rotate_face" binds= [ 2, 3 ]]
[connection signal="mouse_entered" from="HBoxContainer/vbox_rotatez/RotateZ4" to="." method="highlight_face" binds= [ 2, 3 ]]
[connection signal="mouse_exited" from="HBoxContainer/vbox_rotatez/RotateZ4" to="." method="highlight_face" binds= [ 2, 3, true ]]
[connection signal="pressed" from="HBoxContainer/vbox_rotatez/RotateZ4" to="." method="rotate_face" binds= [ 2, 4 ]]
[connection signal="pressed" from="HBoxContainer/vbox_cube_rotate/cube_rotate_x" to="." method="rotate_cube" binds= [ 0 ]]
[connection signal="pressed" from="HBoxContainer/vbox_cube_rotate/cube_rotate_x-" to="." method="rotate_cube" binds= [ 0, -1.571 ]]
[connection signal="pressed" from="HBoxContainer/vbox_cube_rotate/cube_rotate_z" to="." method="rotate_cube" binds= [ 2 ]]
[connection signal="pressed" from="HBoxContainer/vbox_cube_rotate/cube_rotate_z-" to="." method="rotate_cube" binds= [ 2, -1.571 ]]
[connection signal="pressed" from="HBoxContainer/VBoxContainer3/Reset" to="." method="reset"]
[connection signal="value_changed" from="spacing_slider" to="." method="_on_spacing_slider_value_changed"]
